--- a/yulei_Java_demo/com.webntel/config/config.properties
+++ b/yulei_Java_demo/com.webntel/config/config.properties
@@ -1,13 +1,16 @@
 webdv=webdriver.chrome.driver
-webdvdir=./BrowserDriver/chromedriver.exe
-#webdv=webdriver.edge.driver
-#webdvdir=./BrowserDriver/msedgedriver.exe
+webdvdir=.//BrowserDriver//chromedriver.exe
+Edgewebdv= webdriver.edge.driver
+Edgewebdvdir= .//BrowserDriver//msedgedriver.exe
 
 RemoteServerUrl = http://192.168.0.105:4444/wd/hub
 LocalRunning = 1
 
 Threaddely = 2000
 vNtelClientURL = http://192.168.0.25:8180/ntelagent/
+IcareURL= http://192.168.0.25:8280/Icare
+MetricsURL= http://192.168.0.25:8380/DTEWeb/
+
 MySQLDBdriver = com.mysql.jdbc.Driver
 MySQLDBurl = jdbc:mysql://192.168.0.23:3306/DEV_IPF_PTM_CO
 MySQLDBuser = dev_ipf_ptm_co
