add check table point

--- a/yulei_Java_demo/com.webntel/config/config.properties
+++ b/yulei_Java_demo/com.webntel/config/config.properties
@@ -15,3 +15,5 @@ MySQLDBdriver = com.mysql.jdbc.Driver
 MySQLDBurl = jdbc:mysql://192.168.0.25:3306/DEV_IPF_PTM_CO
 MySQLDBuser = dev_ipf_ptm_co
 MySQLDBpassword = 123456
+
+TableCheckPointEnable = 0
