--- a/yulei_Java_demo/com.webntel/config/config.properties
+++ b/yulei_Java_demo/com.webntel/config/config.properties
@@ -16,4 +16,6 @@ MySQLDBurl = jdbc:mysql://192.168.0.23:3306/DEV_IPF_PTM_CO
 MySQLDBuser = dev_ipf_ptm_co
 MySQLDBpassword = 123456
 
+#0 = insert and update Checkpoint
+#1 = Check Point
 TableCheckPointEnable = 1
